fix: support fontawesome changes and footer overlaping

--- a/src/site/public/css/themes/flatly/_variables.scss
+++ b/src/site/public/css/themes/flatly/_variables.scss
@@ -15,7 +15,7 @@ $gray:                   #95a5a6 !default; // #555
 $gray-light:             #b4bcc2 !default;   // #999
 $gray-lighter:           #ecf0f1 !default; // #eee
 
-$brand-primary:         #2C3E50 !default;
+$brand-primary:         #1B1B1C !default;
 $brand-success:         #01A9AA !default;
 $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
